# metaheuristic-trading-strategies

./: Cargo.toml  README.md  compose.yaml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/.sqlx/: query-051fb48af51121354e3a7e183728b5803e5dbf9d445643ed580f9cd3d31d1e13.json  query-05a9610836e5aa64a1f9a4bad12780d779f3c37144dc38d0c96a7e4f3999b598.json  query-0a3114eb9af99421bf79625d7a14a08353dfdb8ca8a88947ca312efa4081fcbe.json  query-0add9bab0257ef3d727c952bf0d347952fc6f777b2c57a080c2bd30e2331a7d8.json  query-16047993c393c46a04a619c2acf9976d060c22fcc9eaaa45d5c6bced7f3d0fd9.json  query-182dd7db0482cdca87e13ba6e7402ada022c67a2ada7124aa65fffb2d457d80d.json  query-196bbb592a2b49e98e09c2754d5df93e4258923a1ab2685cf42e2e5ea708ea0b.json  query-263411156d0870bb5a972dcb138ceb1dd180c78731e31da9d5e53a7cb9e74bdc.json  query-299ec774cddfd916a721ebdec055fc26db18e282d050232eba26a13170174226.json  query-39fcd94e0c47824af1cb9e617923aa8f004190d0b3d15aa4791eb2d92b225e7f.json  query-3d68f02d8dfeeb6aa5211f6bcb586f47e67e801f58bffc518bbe334a6e1080e1.json  query-455adc6858f6e54bfffe1c90862d8bff4897ada46fab7792a10ab4c25b2e1722.json  query-45df4d8b07c909fd8c58fbc26be7fe3ad3b2eee9749cc64d50d0e5526b7b83ff.json  query-4b692d7295a442181b971eb555e96d50dcaed7d434237a5d10990b5194dec291.json  query-4c8c92ede4ca378ede342a0298a9b6b675ff04ee2b965bfeead2ea9b6eb78a11.json  query-4d0856322a3dd2ba03cde68818d644f9ea8b1b50de3fad6b09a38ec7b5e33d74.json  query-51da200529718cc25ead4bfa4fc83ff699bd34f004a5c944621d64b067218047.json  query-6061c3bd99e1df1ed2e0640c57a0261c6bfa0e9f65fd52ca40b4267a5cc4b415.json  (+25 more)
(+109 files in other folders)
