[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.42", features = ["full"] }
once_cell = "1.8"
dotenv = "0.15"
