[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.26"
once_cell = "1.8"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
binance_spot_connector_rust = { git = "https://github.com/binance/binance-spot-connector-rust.git", features = [
    "enable-hyper",
] }
rand = "0.8.5"
rayon = "1.10"
futures = "0.3"
futures-util = "0.3"
